# ellipsx

./: .flake8  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
data/: calibration_standard.csv  sample1_polina.csv  sample2_polina.csv  sample3_polina.csv  smaple4_polina.csv
ellipsx/: __init__.py  ema.py  jones.py  models.py  null.py  optim.py
notebooks/: Direct problem.ipynb  Inverse problem.ipynb
