[project]
name = "ellipsx"
version = "0.0.1"
authors = [
	{name = "Dmitry Streltsov", email = "streltsov.dmitry@gmail.com"},
]
description = "Ellipsometry data analysis with JAX"
readme = "README.md"
license = "MIT"
keywords = [
	"ellipsometry",
	"jax",
]
classifiers = [
	"Development Status :: 1 - Planning",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Framework :: Jupyter",
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering :: Physics"
]
dependencies =[
	"jax~=0.6",
	"jaxtyping>=0.2.24",
	"optimistix"
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tools.hatch.build]
include = ["ellipsx/*"]
