[project]
name = "ellipsx"
version = "0.0.1"
authors = [
	{name = "Dmitry Streltsov", email = "streltsov@ispm.ru"},
]
description = "Ellipsometry data analysis in JAX"
readme = "README.md"
license = "MIT"
keywords = [
	"ellipsometry",
	"jax",
]
classifiers = [
	"Development Status :: 1 - Planning",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Framework :: Jupyter",
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering :: Physics"
]
dependencies =[
	"jax=0.6.2",
	"jaxtyping>=0.2.24",
	"optimistix",
	"pandas"
]
requires-python = ">=3.10"
urls = {repository = "https://github.com/dmstreltsov/ellipsx"}
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tools.hatch.build]
include = ["ellipsx/*"]

[tool.ruff.lint]
ignore = ["F722"]
ignore-init-module-imports = true